# ECS_private

./: klad_mvi  report.md  report3_new.md
Report3/: report3.md  report3_fsm.svg:Zone.Identifier  report3_task_final.svg:Zone.Identifier
examples/c_basics/: README.md
examples/c_basics/cmake_tutorial/: CMakeLists.txt
examples/c_basics/cmake_tutorial/include/mymath/: mymath.h
examples/c_basics/cmake_tutorial/src/: app.c
examples/c_basics/cmake_tutorial/src/mymath/: mymath.c
examples/c_basics/cmake_tutorial/tests/: test_wrap_angle_to_180.c
examples/c_basics/linear_algebra/: Makefile  ex1  ex1_lapacke_and_blas.c  ex2  ex2_lapacke.c
examples/keyboard_interface/: Makefile  README.md  test
mobile_platform_5c/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/coordination_libraries/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/coordination_libraries/examples/: test_DAG.cpp  test_FSM.c
mobile_platform_5c/baseline/coordination_libraries/include/coordination_libraries/top-level_4_state_lcsm/: top-level_4_state_lcsm.h
mobile_platform_5c/baseline/coordination_libraries/src/: DAG.c  FSM.c  lcsm.c  petrinet.c  top-level_4_state_lcsm.c
mobile_platform_5c/baseline/data_structure/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/data_structure/include/actuation_data_structure/: differential_drive_actuation.h
mobile_platform_5c/baseline/data_structure/include/data_structure/geometry/: hesse_normal.h
mobile_platform_5c/baseline/data_structure/include/data_structure/header/: header.h
mobile_platform_5c/baseline/data_structure/include/data_structure/human_computer_interface/: human_computer_interface.h
mobile_platform_5c/baseline/data_structure/include/data_structure/registration/: hash_table_utils.h  hash_table_variable.h
mobile_platform_5c/baseline/data_structure/include/data_structure/time/: timestamp.h
mobile_platform_5c/baseline/data_structure/include/logging_data_structure/: actuation_log_entry.h  sensor_log_entry.h
mobile_platform_5c/baseline/data_structure/include/model_data_structure/: semantic_id.h
mobile_platform_5c/baseline/data_structure/include/navigation_data_structure/: navigation_requests.h
mobile_platform_5c/baseline/data_structure/include/sensor_data_structure/: accelerometer.h  differential_drive_sensor.h  encoder.h  gyroscope.h  lidar.h  range_scan.h  range_sensor.h
mobile_platform_5c/baseline/data_structure/src/registration/: hash_table_utils.c  hash_table_variable.c
mobile_platform_5c/baseline/data_structure/test/: registration_01.c
mobile_platform_5c/baseline/five_c/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/five_c/include/five_c/activity/: activity.h
mobile_platform_5c/baseline/five_c/include/five_c/schedule/: schedule.h
mobile_platform_5c/baseline/five_c/include/five_c/scheduler/eventloop_composition_and_execution/: petrinet_scheduler.h
mobile_platform_5c/baseline/five_c/include/five_c/scheduler/flow_chart_composition_and_execution/: flow_chart_block_types.h  flowchart_execution.h
mobile_platform_5c/baseline/five_c/include/five_c/skill/: skill.h
mobile_platform_5c/baseline/five_c/include/five_c/thread/: thread.h
mobile_platform_5c/baseline/five_c/src/: activity.c  flowchart_execution.c  petrinet_scheduler.c  schedule.c  thread.c
mobile_platform_5c/baseline/math_rob_c/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/math_rob_c/include/math_rob_c/calculus/: polynomial.h
mobile_platform_5c/baseline/math_rob_c/include/math_rob_c/numbers/: numbers.h
mobile_platform_5c/baseline/math_rob_c/src/calculus/: polynomial.c
mobile_platform_5c/baseline/math_rob_c/src/numbers/: numbers.c
mobile_platform_5c/baseline/mobile_platform_drive/: CMakeLists.txt
mobile_platform_5c/baseline/mobile_platform_drive/examples/: kelo_demo_changing_mode.c  kelo_demo_command_line.c  kelo_demo_command_line_with_log.c  kelo_demo_reportIV.c  sudden_jump_detection.h
mobile_platform_5c/baseline/mobile_platform_drive/examples/configuration/: kelo.json
mobile_platform_5c/baseline/mobile_platform_drive/include/mobile_platform_drive/activity/: kelo_drive_activity.h
mobile_platform_5c/baseline/mobile_platform_drive/include/mobile_platform_drive/kelo/: kelo_soem.h  smart_wheel_api.h
mobile_platform_5c/baseline/mobile_platform_drive/src/activity/: kelo_drive_activity.c
mobile_platform_5c/baseline/mobile_platform_drive/src/kelo/: kelo_soem.c
mobile_platform_5c/baseline/mobile_platform_logging/: .gitignore  CMakeLists.txt  README.md
mobile_platform_5c/baseline/mobile_platform_logging/example/: logging_lidar.c
mobile_platform_5c/baseline/mobile_platform_logging/include/mobile_platform_logging/tracepoint/: logging-tp.h
mobile_platform_5c/baseline/mobile_platform_logging/src/tracepoint/: logging-tp.c
mobile_platform_5c/baseline/mobile_platform_proprioception/: CMakeLists.txt
mobile_platform_5c/baseline/mobile_platform_proprioception/include/mobile_platform_proprioception/: delta_tricycle.h
mobile_platform_5c/baseline/mobile_platform_proprioception/include/mobile_platform_proprioception/activity/: activity.h
mobile_platform_5c/baseline/mobile_platform_proprioception/src/: delta_tricycle.c
mobile_platform_5c/baseline/mobile_platform_proprioception/src/activity/: activity.c
mobile_platform_5c/baseline/read_parameter_struct/: CMakeLists.txt  README.md
mobile_platform_5c/baseline/read_parameter_struct/include/read_file/: read_file.h
mobile_platform_5c/baseline/read_parameter_struct/src/: read_file.c
navigation_template/: CMakeLists.txt  README.md  listener.py  logging_live.md  logging_on_robot.md
navigation_template/application/: app.h  app_with_kelo_control.c  app_with_platform_control.c
navigation_template/configuration/: application.json  control.json  hokuyo_urg_05.json  kelo.json  logging.json  proprioception.json
navigation_template/example/: example_logging.c
navigation_template/include/navigation/activity/: navigation_activity.h
navigation_template/src/activity/: navigation_with_kelo_control.c  navigation_with_platform_control.c
(+29 files in other folders)
